# Lai

./: LICENSE  README.md  docker-compose.yml
backend/: .env.example  pyproject.toml
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/baselines/: employment.json  nda.json  saas.json
backend/app/models/: __init__.py  baseline.py  clause.py  contract.py
backend/app/routers/: analysis.py  baselines.py  chat.py  compare.py  contracts.py
backend/app/schemas/: analysis.py  contract.py
backend/app/services/: chat.py  comparator.py  extractor.py  llm.py  parser.py  pipeline.py  scorer.py  summarizer.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/layout/: AppLayout.tsx
frontend/src/lib/: api.ts  utils.ts
frontend/src/pages/: ChatPage.tsx  ComparePage.tsx  ContractPage.tsx  DashboardPage.tsx  UploadPage.tsx
tests/: e2e_results.md
