[project]
name = "lai-backend"
version = "0.1.0"
description = "Legal Document Intelligence System - Backend API"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]",
    "uvicorn[standard]",
    "sqlalchemy>=2.0",
    "alembic",
    "psycopg2-binary",
    "python-dotenv",
    "python-multipart",
    "pydantic>=2.0",
    "pydantic-settings",
    "google-genai",
    "docling",
    "pdfplumber",
    "python-docx",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"
